# AQA_HOME_9.20

./: .env  conftest.py  pyproject.toml  requirements.txt
pages/: cart_page.py  login_page.py
tests/: conftest.py  test_api.py
utils/: cookies_add.py
